--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
    },
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = c # 'Italy'\n",
     "italy"
    ]
   },
