--- a/index.ipynb
+++ b/index.ipynb
@@ -439,35 +439,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_countries = set(countries)\n",
-    "unique__co"
+    "unique_countries = list(unique_countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
+       "['South Korea',\n",
        " 'Mexico',\n",
+       " 'Argentina',\n",
+       " 'Canada',\n",
+       " 'USA',\n",
+       " 'Finland',\n",
        " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       " 'Malta',\n",
+       " 'Italy',\n",
+       " 'Croatia']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
